tests/knative/knative-serving-install/base/test_data/expected/networking.istio.io_v1alpha3_gateway_knative-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    kustomize.component: knative
    networking.knative.dev/ingress-provider: istio
  name: knative-ingress-gateway
  namespace: knative-serving
spec:
  selector:
    app: kfserving-ingressgateway
    kfserving: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
